[metadata]
name = PlaceAutism
version = attr: PlaceAutism.__version__
description = PlaceAutism: Reddit /r/place 2022 bot that automatically sets pixels
long_description = file: README.md
keywords = reddit
license = MIT license
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console

[options]
py_modules = PlaceAutism
install_requires =
    numpy
    matplotlib
    aiohttp
    rich

[options.entry_points]
console_scripts =
    PlaceAutism = PlaceAutism:run
